--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/CalistusObeke01/calistus-portfolio.git"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
